# rag-llm

./: .env.local  .gitignore  README.md  pyproject.toml  requirements.txt
app/: cli.py  config.py  main.py
app/api/: openai_compat.py  routes.py  schemas.py
app/core/: bm25_index.py  chunker.py  embedder.py  generator.py  indexer.py  llm_router.py  parser.py  query_rewriter.py  retriever.py  text_cleaner.py  vision_parser.py
app/core/embedding/: __init__.py  base.py  profiles.py  registry.py
app/core/embedding/providers/: __init__.py  gemini.py  openai_compat.py
app/grpc_api/: rag_pb2.pyi  rag_pb2_grpc.py  server.py
app/models/: document.py  session.py
app/utils/: document_store.py  logging.py  security.py  session_store.py  trace_context.py  tracer.py
config/: embedding_profiles.yml
deploy/: Dockerfile  docker-compose.yml
docs/: 01_PROJECT_DESCRIPTION.md
proto/: rag.proto
rag-llm/: .env.example  .gitignore
rag-llm/app/: config.py
rag-llm/app/api/: routes.py
rag-llm/app/core/: embedder.py  generator.py  llm_router.py  reranker.py  retriever.py  summarizer.py
rag-llm/app/evaluation/: evaluator.py
rag-llm/app/grpc_api/: rag_pb2.py  service.py
rag-llm/app/utils/: monitoring.py  tracer.py
rag-llm/docs/: 02_ROADMAP.md  03_TECH_STACK.md
rag-llm/tests/: explore_docling.py  test_02_parser_chunker.py  test_04_pipeline.py  test_new_chunker.py
tests/: analyze_chunking.py  compare_formats.py  run_all.py  test_01_models.py  test_03_indexer.py
