[project]
name = "rag-llm"
version = "0.1.0"
description = "Прозрачный RAG-as-a-service — загружайте документы, задавайте вопросы, видьте каждый шаг пайплайна."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Abay" },
]

dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.13.0",
    "httpx>=0.28.0",
    "docling>=2.80.0",
    "chromadb>=1.0.0",
    "psutil>=6.1.0",
    "pynvml>=12.0.0",
    "loguru>=0.7.3",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx",  # для TestClient
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
